--- a/package.json
+++ b/package.json
@@ -1,12 +1,19 @@
 {
-  "name": "VRath",
-  "version": "0.0.1",
-  "description": "VRath - simple shooting range game",
-  "main": "index.js",
-  "repository": "https://github.com/heban/VRath.git",
-  "author": "heban <pawel.ochota@gmail.com>",
-  "license": "MIT",
-  "devDependencies": {
-    "aframe": "^0.5.0"
-  }
+    "name": "VRath",
+    "version": "0.0.1",
+    "description": "VRath - simple shooting range game",
+    "main": "index.js",
+    "repository": "https://github.com/heban/VRath.git",
+    "author": "heban <pawel.ochota@gmail.com>",
+    "license": "MIT",
+    "scripts": {
+        "start": "webpack --config webpack.config.js"
+    },
+    "devDependencies": {
+        "aframe": "^0.5.0",
+        "babel-core": "^6.24.0",
+        "babel-loader": "^6.4.1",
+        "babel-preset-env": "^1.2.2",
+        "webpack": "^2.3.2"
+    }
 }
