--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
         "babel-core": "^6.24.0",
         "babel-loader": "^6.4.1",
         "babel-preset-env": "^1.2.2",
+        "babel-preset-react": "^6.23.0",
+        "react": "^15.4.2",
+        "react-dom": "^15.4.2",
         "webpack": "^2.3.2"
     }
 }
