--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
     "name": "VRath",
     "version": "0.0.1",
     "description": "VRath - simple shooting range game",
-    "main": "index.js",
+    "main": "build/js/bundle.js",
     "repository": "https://github.com/heban/VRath.git",
     "author": "heban <pawel.ochota@gmail.com>",
     "license": "MIT",
     "scripts": {
-        "start": "webpack --config webpack.config.js"
+        "dev": "webpack --config webpack.config.js",
+        "production": "webpack -p --config webpack.config.js",
+        "server": "webpack-dev-server --config webpack.config.js --open"
     },
     "devDependencies": {
         "aframe": "^0.5.0",
@@ -17,6 +19,7 @@
         "babel-preset-react": "^6.23.0",
         "react": "^15.4.2",
         "react-dom": "^15.4.2",
-        "webpack": "^2.3.2"
+        "webpack": "^2.3.2",
+        "webpack-dev-server": "^2.4.2"
     }
 }
