--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "eslint": "^3.19.0",
         "eslint-loader": "^1.7.1",
         "eslint-plugin-react": "^6.10.3",
+        "file-loader": "^0.11.1",
         "prop-types": "^15.5.8",
         "react": "^15.4.2",
         "react-dom": "^15.4.2",
