--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     },
     "devDependencies": {
         "aframe": "^0.5.0",
+        "aframe-animation-component": "^3.2.5",
         "aframe-react": "^4.1.0",
         "babel-core": "^6.24.0",
         "babel-loader": "^6.4.1",
