aframe-redux, small improvements

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,11 +16,17 @@
     "plugins": [
         "react"
     ],
+    "globals": {
+        "AFRAME": true
+    },
     "rules": {
         "no-console": 0,
         "indent": [
             "error",
-            4
+            4,
+            {
+                "SwitchCase": 1
+            }
         ],
         "linebreak-style": [
             "error",
