--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
         "aframe": "^0.5.0",
         "aframe-animation-component": "^3.2.5",
         "aframe-react": "^4.1.0",
+        "aframe-redux-component": "^3.0.2",
         "babel-core": "^6.24.0",
         "babel-loader": "^6.4.1",
+        "babel-plugin-transform-object-rest-spread": "^6.23.0",
         "babel-preset-env": "^1.2.2",
         "babel-preset-react": "^6.23.0",
         "eslint": "^3.19.0",
