--- a/package.json
+++ b/package.json
@@ -22,13 +22,18 @@
         "babel-plugin-transform-object-rest-spread": "^6.23.0",
         "babel-preset-env": "^1.2.2",
         "babel-preset-react": "^6.23.0",
+        "css-loader": "^0.28.2",
         "eslint": "^3.19.0",
         "eslint-loader": "^1.7.1",
         "eslint-plugin-react": "^6.10.3",
         "file-loader": "^0.11.1",
+        "node-sass": "^4.5.3",
+        "normalize.css": "^7.0.0",
         "prop-types": "^15.5.8",
         "react": "^15.4.2",
         "react-dom": "^15.4.2",
+        "sass-loader": "^6.0.5",
+        "style-loader": "^0.18.1",
         "webpack": "^2.3.2",
         "webpack-dev-server": "^2.4.2"
     }
