--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
         "aframe": "^0.5.0",
         "aframe-animation-component": "^3.2.5",
         "aframe-react": "^4.1.0",
-        "aframe-redux-component": "^3.0.2",
         "babel-core": "^6.24.0",
         "babel-loader": "^6.4.1",
         "babel-plugin-transform-object-rest-spread": "^6.23.0",
@@ -32,6 +31,8 @@
         "prop-types": "^15.5.8",
         "react": "^15.4.2",
         "react-dom": "^15.4.2",
+        "react-redux": "^5.0.5",
+        "redux": "^3.6.0",
         "sass-loader": "^6.0.5",
         "style-loader": "^0.18.1",
         "webpack": "^2.3.2",
